--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
-    "gh-pages": "^3.2.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -42,5 +41,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://tatianakharitonovich.github.io/react-app"
+  "homepage": "https://tatianakharitonovich.github.io/react-search-github/",
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
